--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://FirstDB:zMXu68xHLwvIihJQ@cluster0.ab6vpja.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://FirstDB:HelloFristDB@cluster0.ab6vpja.mongodb.net/tab-trackerDB?retryWrites=true&w=majority
