--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URI=mongodb+srv://FirstDB:HelloFristDB@cluster0.ab6vpja.mongodb.net/tab-trackerDB?retryWrites=true&w=majority
 PORT=5000
+NODE_ENV=production
