--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "server.js",
-    "devStart": "nodemon ./server.js"
+    "start": "node server.js",
+    "devStart": "nodemon ./server.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,8 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.3"
+    "mongoose": "^6.5.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "dotenv": "^16.0.1",
